--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,13 @@
 {
-    "builds":[
-        {
-            "src":"api/main.py",
-            "use":"@vercel/python"
-        }
-    ],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"api/app.py"
-        }
-    ]
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.10"
+    }
+  },
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    }
+  ]
 }
