--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "builds": [
-    { "src": "server.py", "use": "@vercel/python" }
+    { "src": "app.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "server.py" }
+    { "src": "/(.*)", "dest": "app.py" }
   ]
 }
