--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/**/*.py": {
-      "runtime": "python@latest"  
+      "runtime": "python@3.9"  
     }
   },
   "routes": [
