--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,3 @@
 {
-  "functions": {
-    "api/**/*.py": {
-      "runtime": "python@3.9"  
-    }
-  },
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/app.py" 
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api/app" }]
 }
